--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,7 +2,7 @@ redis.ip = 127.0.0.1
 redis.port = 6379
 redis.pwd = j9NbzSxbUOEgtDor210MqE9jzjt0M4WC
 redis.key = beecacheRedis
-db=postgresql
+db=sqlite
 psql.user=postgres
 psql.port=5432
 psql.addr=127.0.0.1
@@ -15,7 +15,7 @@ db.port = 3306
 db.dbname = dimon 
 db.prefix = goblog_
 appname = myblog
-httpport = 80
+httpport = 8080
 runmode = dev
 sessionon = true
 banner1.url= http://www.bootcss.com/p/unslider/img/sunset.jpg
